# url-shortener-FastAPI

./: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: .gitignore  __init__.py  main.py
app/adapters/: __init__.py
app/adapters/dependencies/: __init__.py  url.py
app/adapters/services/database/core/: __init__.py  connection.py  database.py  unit_of_work.py
app/adapters/services/database/migrations/: env.py
app/adapters/services/database/migrations/versions/: da7dd15b875f_initial.py
app/adapters/services/database/models/: __init__.py  base.py  url.py
app/adapters/services/database/repositories/: __init__.py  base.py  crud.py  url.py
app/adapters/services/service/: __init__.py  url.py
app/adapters/utils/: converters.py  decorators.py  keygen.py
app/api/: __init__.py  server.py
app/api/common/: exceptions.py
app/api/common/database/: __init__.py
app/api/common/database/interfaces/: mediator.py  unit_of_work.py
app/api/common/database/interfaces/repositories/: __init__.py  base.py  crud.py
app/api/common/schemas/: __init__.py  url.py
app/api/core/: __init__.py  routers.py  settings.py
app/api/routers/: routers.py  url.py
